--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             with enough power to destroy an entire Opensource culture.</p>
                             <p>Pursued by the Empire's sinister agents, Princess Leia races home
                             aboard her starship, custodian of the stolen plans that can save her
-                            people and restore freedom to the galaxy....</p>
+                            people and restore freedom to the coding....</p>
                         </div>
                     </div>
                 </div>
