--- a/report/index.html
+++ b/report/index.html
@@ -15,8 +15,9 @@
         <div class="message">
           <h1>High Alert Report</h1>
           <p style="margin-bottom: 0;">
-            <span id="starship">13</span> has been spotted in transit toward <span id="planet">2</span>.
-            It is known that <span id="person">5</span> is currently there. Take action.
+            Our probes have detected a proximity reading on a <span id="starship">13</span>,
+            bound for <span id="planet">2</span>. We are also aware that <span id="person">5</span>
+            is currently there. Action must be taken immediately.
           </p>
         </div>
         <a href="https://www.digia.com" class="darth-vader-link" target="_blank">
