Digia-At-Coding-Factory logo showing on the index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="deathstar"></div>
         </div>
         <div id="supported">
-            <div id="main-title"><img src="images/logo.svg" /></div>
+            <div id="main-title"><img src="images/Digia-At-Coding-Factory.svg" /></div>
             <div id="wrapper">
                 <div id="intro">A long time ago, in a galaxy far, far, away....</div>
                 <div id="crawling-txt">
