--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <body>
         <div id="loading">Loading...</div>
         <div class="bg">
+		  <div class="welcome">
+          <h1>Welcome to Rebel Alliance Information System</h1>
+          <p>
+            We have high alert report on our system. Action must be taken immediately. Move to the report page!
+		  <a href="report/index.html" target="_blank">
+			>> Enter System
+			<!--<img
+				src="images/ra_press_enter.png"
+				alt="Enter Rebel Alliance Information System"
+				title="Enter Rebel Alliance Information System"
+				class="rebel-alliance-symbol"
+				/> -->
+		</a>
+			</p>
+		</div>
             <div class="deathstar"></div>
         </div>
         <div id="supported">
