--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <body>
         <div id="loading">Loading...</div>
         <div class="bg">
+			<div class="welcome">
+				<h1>Welcome to Rebel Alliance Information System</h1>
+				<p>We have an high alert report on our system. Action must be taken immediately. Move to the report page!</p>
+				<p><a href="report/index.html" target="_blank">>> Enter System</a></p>
+			</div>
             <div class="deathstar"></div>
         </div>
         <div id="supported">
