Removed jquery, bootstrap resources, darker color for scrolling text, displaying fontawesome icon on top of broken deathstar photo.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="css/styles.css" />
         <script src="lib/modernizr.custom.96959.js"></script>
         <script src="lib/prefixfree.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     </head>
     <body>
         <div id="loading">Loading...</div>
@@ -17,7 +15,7 @@
 				<p>We have an high alert report on our system. Action must be taken immediately. Move to the report page!</p>
 				<p><a href="report/index.html" target="_blank">>> Enter System</a></p>
 			</div>
-            <div class="deathstar"></div>
+            <div class="deathstar"><i class="fas fa-bullseye fa-5x"></i></div>
         </div>
         <div id="supported">
             <div id="main-title"><img src="images/Digia-At-Coding-Factory.svg" /></div>
