fixed index link error, added escape character for '>'

--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
             We have high alert report on our system. Action must be taken immediately. Move to the report page!
 		  </p>
 		  <p>
-		  <a href="report/index.html" target="_blank">
-			>> Enter System
-			<!--<img
-				src="images/ra_press_enter.png"
-				alt="Enter Rebel Alliance Information System"
-				title="Enter Rebel Alliance Information System"
-				class="rebel-alliance-symbol"
-				/> -->
-			</a>		
+		  <a href="report/index.html" target="_blank">&gt;&gt; Enter System</a>		
 		</p>
 		</div>
             <div class="deathstar"></div>
