added font link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="css/styles.css" />
         <script src="lib/modernizr.custom.96959.js"></script>
         <script src="lib/prefixfree.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Signika:300,400" rel="stylesheet" />		
         <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     </head>
     <body>
