--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
                     <div class="text">
                         <div class="inner-txt">
                             <p class="episode">Episode I</p>
+                                     <p class="episode">Episode I</p>
                             <p class="subtitle">A new developer</p>
-                            <p>It is a period of civil war. Rebel spaceships, striking from 
+                            <p>It is a period of digital war. Opensource community spaceships, striking from 
                             a hidden base, have won their first victory 
                             against the evil Enterprise.</p>
-                            <p>During the battle, Rebel spies managed to steal secret SQL-database to the
-                            Empire's ultimate plans, the Legacy application, an armored space station
+                            <p>During the battle, Opensource spies managed to steal secret SQL-database to the
+                            Enterprise's ultimate plans, the Legacy application, an armored space station
                             with enough power to destroy an entire Opensource culture.</p>
-                            <p>Pursued by the Empire's sinister agents, Princess Leia races home
+                            <p>Pursued by the Enterprise's sinister agents, Project manager Leija races home
                             aboard her starship, custodian of the stolen plans that can save her
                             people and restore freedom to the coding....</p>
                         </div>
