added page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+	    <title>Welcome to Rebel Alliance Information System</title>
         <meta charset="utf-8">
         <link type="text/css" rel="stylesheet" media="screen" href="css/styles.css" />
         <script src="lib/modernizr.custom.96959.js"></script>
