--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="bg">
 			<div class="welcome">
 				<h1>Welcome to Rebel Alliance Information System</h1>
-				<p>We have an high alert report on our system. Action must be taken immediately. Move to the report page!</p>
+				<p>We have a high alert report on our system. Action must be taken immediately. Move to the report page!</p>
 				<p><a href="report/index.html" target="_blank">>> Enter System</a></p>
 			</div>
             <div class="deathstar"><i class="fas fa-bullseye fa-5x"></i></div>
