--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		  <div class="welcome">
           <h1>Welcome to Rebel Alliance Information System</h1>
           <p>
-            We have high alert report on our system. Action must be taken immediately. Move to the report page!
+            We have a high alert report on our system. Action must be taken immediately. Move to the report page!
 		  </p>
 		  <p>
 		  <a href="report/index.html" target="_blank">&gt;&gt; Enter System</a>		
